<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/fab_transformation_sheet_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:background="#6B28E1"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center">

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/expense_1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/monthly_budget"
            android:textColor="#F880FFDB"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/income_1"
            android:textColor="#FFEA80"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="76dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            tools:ignore="ExtraText"><![CDATA[

            ]]><com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Income_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            android:hint="@string/example_3000_00" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/income_2"
            android:textColor="#FFEA80"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Income_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/example_4000_00" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="48dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/expense_1"
            android:textColor="#84FFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="260dp"
            android:layout_height="0dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Expense_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/example_100_00" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/expense_2"
            android:textColor="#84FFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            app:boxBackgroundColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/checkBox5"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Expense_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_100_00" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/expense_3"
            android:textColor="#84FFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout9"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/checkBox6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Expense_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_100_00" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/expense_4"
            android:textColor="#84FFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/checkBox7"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Expense_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_100_00" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Final_Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/final_total"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Calculate_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/calculate_net_balance"
            app:layout_constraintBottom_toTopOf="@+id/Final_Total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Expense_Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/total_2"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/Calculate_Button"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/Income_Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/total_1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>